--- a/browse.html
+++ b/browse.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Hello, World! • A-Frame</title>
+    <meta name="description" content="Hello, World! • A-Frame">
+    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
+  </head>
+  <body>
+
 <script>
   AFRAME.registerComponent('set-sky', {
     schema: {default:''},
@@ -21,3 +31,5 @@
 
   <a-sky></a-sky>
 </a-scene>
+</body>
+</html>
